# ska-sdp-spectral-line-imaging

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .release  CHANGELOG.md  CODEOWNERS  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  INSTALLATION.md  Makefile  README.md  Singularity  docker-compose.yml  environment.yml  pyproject.toml  setup.py
.githooks/: pre-commit  pre-push  prepare-commit-msg
docs/: Makefile  generate_config.py
docs/src/: benchmark.md  conf.py  index.rst  installation.rst  launching_dask.rst  local_dist_env.md  pipeline_framework.rst  pipeline_usage.rst  piper.rst  stage_config.rst
docs/src/ska_sdp_spectral_line_imaging/: guide.rst  modules.rst  ska_sdp_pipelines.app.cli.rst  ska_sdp_pipelines.app.constants.rst  ska_sdp_pipelines.app.executable_pipeline.rst  ska_sdp_pipelines.app.rst  ska_sdp_pipelines.extensions.rst  ska_sdp_pipelines.extensions.sphynx_stage.rst  ska_sdp_pipelines.framework.command.rst  ska_sdp_pipelines.framework.configurable_stage.rst  ska_sdp_pipelines.framework.configuration.rst  ska_sdp_pipelines.framework.constants.rst  ska_sdp_pipelines.framework.diagnoser.rst  ska_sdp_pipelines.framework.exceptions.rst  ska_sdp_pipelines.framework.io_utils.rst  ska_sdp_pipelines.framework.log_util.rst  ska_sdp_pipelines.framework.model.cli_command_parser.rst  ska_sdp_pipelines.framework.model.config_manager.rst  ska_sdp_pipelines.framework.model.named_instance.rst  ska_sdp_pipelines.framework.model.rst  ska_sdp_pipelines.framework.model.stages.rst  ska_sdp_pipelines.framework.pipeline.rst  ska_sdp_pipelines.framework.rst  ska_sdp_pipelines.framework.scheduler.rst  ska_sdp_pipelines.rst  ska_sdp_piper.app.cli.rst  ska_sdp_piper.app.constants.rst  ska_sdp_piper.app.executable_pipeline.rst  ska_sdp_piper.app.rst  ska_sdp_piper.extensions.rst  ska_sdp_piper.extensions.sphynx_stage.rst  ska_sdp_piper.framework.command.rst  ska_sdp_piper.framework.configurable_stage.rst  ska_sdp_piper.framework.configuration.rst  ska_sdp_piper.framework.constants.rst  ska_sdp_piper.framework.exceptions.rst  ska_sdp_piper.framework.io_utils.rst  ska_sdp_piper.framework.log_util.rst  ska_sdp_piper.framework.model.cli_command_parser.rst  ska_sdp_piper.framework.model.config_manager.rst  (+57 more)
examples/: csd3_sbatch.sh  csd3_sbatch_benchmark.sh  docker-compose-benchmark.yml  install-config-and-run-pipeline.sh
notebooks/: clean.ipynb  mid_data_simulation.ipynb  ska1-mid.cfg  stage_config_export.ipynb
scripts/: bash-completions.bash  benchmark.sh  generate_config.py  install-pipeline.sh  recreate-conda-env.sh
singularity/: Singularity  singularity_builder
src/ska_sdp_benchmarker/: benchmark.py  cli_args.py
src/ska_sdp_pipelines/: cli.py
src/ska_sdp_pipelines/app/: cli.py  constants.py  executable_pipeline.py
src/ska_sdp_pipelines/extensions/: sphynx_stage.py
src/ska_sdp_pipelines/framework/: __init__.py  command.py  configurable_stage.py  configuration.py  constants.py  exceptions.py  io_utils.py  log_util.py  pipeline.py  pipeline_datastore.py  scheduler.py  stage.py
src/ska_sdp_piper/: __init__.py
src/ska_sdp_piper/app/: benchmark.py  cli.py  executable_pipeline.py
src/ska_sdp_piper/extensions/: sphynx_stage.py
src/ska_sdp_piper/framework/: command.py  configurable_stage.py  constants.py  scheduler.py
src/ska_sdp_piper/piper/: configuration.py  constants.py  diagnoser.py  io_utils.py  named_instance.py  pipeline.py  scheduler.py
src/ska_sdp_piper/scripts/: run-dool.sh  setup-dool.sh
src/ska_sdp_spectral_line_imaging/: __init__.py  constants.py  graph_pipeline.py  pipeline.py  scheduler.py  upstream_output.py  util.py
src/ska_sdp_spectral_line_imaging/data_procs/: __init__.py  flagging.py  imaging.py  model.py  (+1 more)
tests/ska_sdp_pipelines/: test_io_utils.py  test_pipeline.py  test_stage.py
(+197 files in other folders)
