[tool.poetry]
name = "ska-sdp-spectral-line-imaging"
version = "0.0.1"
description = "SKA SDP Spectral Line Imaging Pipeline"
authors = ["DHRUVA <DHRUVA-team@SKA>"]
license = "BSD-3-Clause"
packages = [
    { include = "ska_sdp_spectral_line_imaging", from = "src" }
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "skao"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
nbmake = "^1.4.1"
isort = "^5.6.4"
black = "^22.3.0"
recommonmark = "^0.7.1"
setuptools = "^70.0.0"
nbqa = "^1.8.5"
pylint = "^3.2.3"
numpy = "^1.26.4"
flake8 = "^7.0.0"
jsonschema = "^4.22.0"
typer = "^0.12.3"
xradio = {version = "^0.0.28", python = "<3.12,>=3.10"}
xarray = "^2024.6.0"
ducc0 = "^0.34.0"

ska-sdp-datamodels = "^0.3.0"
[tool.poetry.group.dev.dependencies]
docutils = "<=0.19"
markupsafe = "^2.1.3"
pygments = "^2.15.1"
python-dotenv = ">=0.5.1"
sphinx = ">=1.6,<7"
sphinx-autobuild = "^2021.3.14"
sphinxcontrib-websupport = "^1.2.4"
pipdeptree = "^2.10.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-pylint = "^0.21.0"
pylint-junit = "^0.3.4"
pytest-json = "^0.4.0"
pytest-json-report = "^1.5.0"
pytest-mock = "^3.14.0"
mock = "^5.1.0"

[tool.poetry.group.docs.dependencies]
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sdp-pipelines = "ska_sdp_pipelines.app.cli:app"
